feature: Add Link to github

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -24,7 +24,9 @@
                     <h1 class="muted">Explore the changes in these days!</h1>
                 </div>
             </div>
-            <span class="badge">GitHub</span>
+            <a class="badge" href="https://github.com/yasaminashoori/DivarAnalyzer">
+                <span>GitHub</span>
+            </a>
         </div>
 
         <div class="controls panel">
